manifests/stock-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api
  namespace: pueyleng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
  template:
    metadata:
      labels:
        app: stock-api
    spec:
      containers:
        - name: stock-api
          image: nakharina/stock-viz:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
