manifests/stock-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-api
  namespace: pueyleng
spec:
  type: ClusterIP
  selector:
    app: stock-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
