manifests/stock-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-api
  namespace: pueyleng
  annotations:
    argocd.argoproj.io/sync-options: "Validate=false"
spec:
  ingressClassName: nginx
  rules:
    - host: stock-api.pueyleng.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: stock-api
                port:
                  name: http
